# shinku-poker-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
db/: schema.sql
range/: parse_ranges.py
range/preflop/: bb_vs_limp.json  bb_vs_raise.json  sb_open.json  sb_vs_3bet.json  sb_vs_raise.json
src/: db.py  main.py  models.py  poker_agent.py  postflop.py  utils.py
tests/: test_main.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/hands/[id]/: page.tsx
web/app/runs/[id]/: page.tsx
web/components/: Board.tsx  Card.tsx  HandReplay.tsx  HandRow.tsx
web/lib/: db.ts  poker.ts  types.ts
