[project]
name = "researcher-api"
version = "0.1.0"
description = "GTO Wizard AI researcher API - Skeleton Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pre-commit>=4.5.1",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[tool.ruff]
src = ["src"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "F", "W", "I"]
ignore = ["W391", "W292", "E203"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"tests/*.py" = ["E402"]
